vcs/kustomize/vcs/overlays/local/vcs/verifier/add-ca.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: verifier-vcs
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: vcs-ca-cert
      containers:
        - name: vcs
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/vcs/tls
