vcs/kustomize/vcs/overlays/local/vcs/verifier/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier-vcs
  labels:
    app: verifier-vcs
spec:
  tls:
  - hosts:
      - $(VERIFIER_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(VERIFIER_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: verifier-vcs
            port:
              name: http
